Add pre-build script to update MsalActivity.cs
- Updated `BaseAppWithAuthorization.csproj` to include a `<PreBuildEvent>` that runs `updatemsal.ps1`.
- Modified `<ItemGroup>` to remove and re-add `appsettings.json` as an embedded resource.
- Adjusted folder entries for `ViewModels` and `Views` for consistency.
- Added `updatemsal.ps1` to dynamically update the `DataScheme` in `MsalActivity.cs` based on `appsettings.json`.

--- a/BaseAppWithAuthorization/BaseAppWithAuthorization.csproj
+++ b/BaseAppWithAuthorization/BaseAppWithAuthorization.csproj
@@ -41,6 +41,10 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<PreBuildEvent>powershell -ExecutionPolicy Bypass -File $(ProjectDir)updatemsal.ps1</PreBuildEvent>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -60,13 +64,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="appsettings.json" />
+   <None Remove="appsettings.json" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="appsettings.json">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </EmbeddedResource>
+   <EmbeddedResource Include="appsettings.json">
+     <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+   </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -81,8 +85,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="ViewModels\" />
-	  <Folder Include="Views\" />
+   <Folder Include="ViewModels\" />
+   <Folder Include="Views\" />
 	</ItemGroup>
 
 </Project>
