--- a/BaseAppWithAuthorization/appsettings.json
+++ b/BaseAppWithAuthorization/appsettings.json
@@ -1,7 +1,9 @@
 {
   "AzureAd": {
-    "Authority": "https://logicloop18AzureAuth.ciamlogin.com/",
-    "ClientId": "5903a498-6b45-4c70-a6b0-57b439fd14b1",
+    "Authority": "https://login.microsoftonline.com/common",
+  
+    "ClientId": "5998ef82-5d29-43eb-8c29-3c3dfd3dfbfb",
+    "TenantId": "c10dbb6a-d449-4d87-a9eb-1a285468a9d6",
     "CacheFileName": "msal_cache.txt",
     "CacheDir": "C:/temp"
   },
