--- a/BaseAppWithAuthorization/appsettings.json
+++ b/BaseAppWithAuthorization/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/common",
-  
-    "ClientId": "5998ef82-5d29-43eb-8c29-3c3dfd3dfbfb",
-    "TenantId": "c10dbb6a-d449-4d87-a9eb-1a285468a9d6",
+    "Authority": "https://myrecipebookmakertenant.ciamlogin.com/1ccb4265-f208-4ca9-ba06-0802cb4e13ac",
+
+    "ClientId": "c8dac56d-375b-426f-a141-bb73d377869b",
+
     "CacheFileName": "msal_cache.txt",
     "CacheDir": "C:/temp"
   },
